<resources>
    <string name="app_name">LightsOut</string>
    <string name="action_settings">Settings</string>
    <string name="button_classic">Classic</string>
    <string name="button_deluxe">Deluxe</string>
    <string name="button_how_to_play">How to Play</string>
    <string name="button_about">About</string>
    <string name="lights_out_title">Lights Out!</string>
    <string name="moves_title">Moves:</string>


</resources>
